@@ -1,5 +1,6 @@
 package com.agencia.viajes.transaccional.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -9,37 +10,63 @@ import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
+    @Value("${cors.allowed-origins:*}")
+    private String allowedOrigins;
+
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-        config.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization"));
+
+        if ("*".equals(allowedOrigins)) {
+            // Permitir cualquier origen (desarrollo / pruebas rápidas)
+            config.setAllowedOriginPatterns(List.of("*"));
+            config.setAllowCredentials(true);
+        } else {
+            // Orígenes específicos separados por coma
+            config.setAllowCredentials(true);
+            config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        }
+
+        config.setAllowedHeaders(Arrays.asList(
+            "Origin", "Content-Type", "Accept", "Authorization",
+            "X-Requested-With", "Cache-Control"
+        ));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        
+        config.setExposedHeaders(Arrays.asList("Authorization"));
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/graphql/**", config);
-        source.registerCorsConfiguration("/api/gerencial/**", config);
-        source.registerCorsConfiguration("/**", config); // General mapping just in case
-        
+        source.registerCorsConfiguration("/**", config);
+
         return new CorsFilter(source);
     }
-    
+
     @Bean
     public WebMvcConfigurer corsConfigurer() {
         return new WebMvcConfigurer() {
             @Override
             public void addCorsMappings(CorsRegistry registry) {
-                registry.addMapping("/**")
-                        .allowedOrigins("http://localhost:4200")
-                        .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
-                        .allowedHeaders("*")
-                        .allowCredentials(true);
+                if ("*".equals(allowedOrigins)) {
+                    registry.addMapping("/**")
+                            .allowedOriginPatterns("*")
+                            .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
+                            .allowedHeaders("*")
+                            .exposedHeaders("Authorization")
+                            .allowCredentials(true);
+                } else {
+                    registry.addMapping("/**")
+                            .allowedOrigins(allowedOrigins.split(","))
+                            .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
+                            .allowedHeaders("*")
+                            .exposedHeaders("Authorization")
+                            .allowCredentials(true);
+                }
             }
         };
     }
 }
+
